brinkmanship_engine/build_log_utf8.txt
cargo :    Compiling proc-macro2 v1.0.106
At line:1 char:224
+ ... _cache\phase14_log_capture"; cargo check --tests > build_log.txt 2>&1
+                                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (   Compiling proc-macro2 v1.0.106:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
   Compiling quote v1.0.45
   Compiling unicode-ident v1.0.24
    Checking cfg-if v1.0.4
    Checking windows-link v0.2.1
   Compiling windows_x86_64_msvc v0.53.1
    Checking pin-project-lite v0.2.17
    Checking itoa v1.0.17
   Compiling serde_core v1.0.228
    Checking bytes v1.11.1
    Checking futures-core v0.3.32
   Compiling parking_lot_core v0.9.12
    Checking smallvec v1.15.1
    Checking scopeguard v1.2.0
   Compiling zerocopy v0.8.40
    Checking once_cell v1.21.3
    Checking getrandom v0.2.17
    Checking windows-sys v0.61.2
   Compiling serde v1.0.228
    Checking log v0.4.29
   Compiling autocfg v1.5.0
    Checking tower-service v0.3.3
    Checking lock_api v0.4.14
   Compiling fnv v1.0.7
    Checking tracing-core v0.1.36
   Compiling strsim v0.11.1
    Checking rand_core v0.6.4
   Compiling httparse v1.10.1
   Compiling libm v0.2.16
   Compiling typenum v1.19.0
    Checking slab v0.4.12
    Checking http v1.4.0
    Checking futures-task v0.3.32
   Compiling ident_case v1.0.1
    Checking tracing v0.1.44
   Compiling num-traits v0.2.19
    Checking mime v0.3.17
    Checking percent-encoding v2.3.2
    Checking futures-util v0.3.32
    Checking tower-layer v0.3.3
   Compiling rustversion v1.0.22
    Checking windows-targets v0.53.5
    Checking httpdate v1.0.3
    Checking parking_lot v0.12.5
   Compiling unicase v2.9.0
   Compiling zmij v1.0.21
    Checking windows-sys v0.60.2
    Checking futures-channel v0.3.32
   Compiling serde_json v1.0.149
    Checking http-body v1.0.1
   Compiling mime_guess v2.0.5
    Checking atomic-waker v1.1.2
    Checking http-body-util v0.1.3
   Compiling syn v2.0.117
   Compiling getrandom v0.4.2
    Checking pin-utils v0.1.0
   Compiling version_check v0.9.5
    Checking sync_wrapper v1.0.2
    Checking bitmaps v2.1.0
    Checking mio v1.1.1
    Checking form_urlencoded v1.2.2
    Checking memchr v2.8.0
    Checking futures-sink v0.3.32
    Checking ryu v1.0.23
    Checking rand_xoshiro v0.6.0
    Checking bitflags v2.11.0
    Checking socket2 v0.6.2
   Compiling im v15.1.0
    Checking http-range-header v0.4.2
    Checking matchit v0.7.3
    Checking sized-chunks v0.6.5
    Checking serde_path_to_error v0.1.20
    Checking uuid v1.21.0
    Checking ppv-lite86 v0.2.21
    Checking rand_chacha v0.3.1
   Compiling darling_core v0.21.3
    Checking rand v0.8.5
    Checking rand_distr v0.4.3
   Compiling tokio-macros v2.6.1
   Compiling serde_derive v1.0.228
   Compiling async-trait v0.1.89
    Checking tokio v1.50.0
    Checking axum-core v0.4.5
   Compiling darling_macro v0.21.3
   Compiling darling v0.21.3
   Compiling serde_with_macros v3.17.0
    Checking serde_with v3.17.0
    Checking serde_urlencoded v0.7.1
    Checking chrono v0.4.44
    Checking hyper v1.8.1
    Checking tower v0.5.3
    Checking tokio-util v0.7.18
    Checking tower-http v0.5.2
    Checking hyper-util v0.1.20
    Checking axum v0.7.9
    Checking brinkmanship_engine v0.1.0 (C:\Users\zephy\Documents\Brinkmanship\brinkmanship_engine)
warning: unused imports: `DemographicsComponent`, `IdeologyComponent`, `MetricsComponent`, and `SystemComponent`
 --> src\chronos.rs:1:27
  |
1 | use crate::state::{State, MetricsComponent, DemographicsComponent, SystemComponent, IdeologyComponent, 
PendingAction};
  |                           ^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `im::HashMap`
 --> src\chronos.rs:5:5
  |
5 | use im::HashMap;
  |     ^^^^^^^^^^^

warning: unnecessary parentheses around assigned value
   --> src\ai_director_stress.rs:103:22
    |
103 |         let ram_kb = (actor_count as f64 * 0.12); // ~120 bytes per actor diff in map
    |                      ^                         ^
    |
    = note: `#[warn(unused_parens)]` (part of `#[warn(unused)]`) on by default
help: remove these parentheses
    |
103 -         let ram_kb = (actor_count as f64 * 0.12); // ~120 bytes per actor diff in map
103 +         let ram_kb = actor_count as f64 * 0.12 ; // ~120 bytes per actor diff in map
    |

error[E0282]: type annotations needed
  --> src\ai_director_stress.rs:79:94
   |
79 |                     speculative_state.metrics = speculative_state.metrics.update(actor_key, |m| {
   |                                                                                              ^
80 |                         let mut m = m.unwrap_or_default();
   |                                     - type must be known at this point
   |
help: consider giving this closure parameter an explicit type
   |
79 |                     speculative_state.metrics = speculative_state.metrics.update(actor_key, |m: /* Type */| {
   |                                                                                               ++++++++++++

error[E0282]: type annotations needed
   --> src\chronos.rs:278:69
    |
278 |         state.metrics = state.metrics.update("PLAYER".to_string(), |mut m| {
    |                                                                     ^^^^^
279 |             m.stability = 30.0;
    |             - type must be known at this point
    |
help: consider giving this closure parameter an explicit type
    |
278 |         state.metrics = state.metrics.update("PLAYER".to_string(), |mut m: /* Type */| {
    |                                                                          ++++++++++++

error[E0308]: mismatched types
   --> src\reactor.rs:140:31
    |
140 |           state.system_states = state.system_states.insert("PLAYER".to_string(), crate::state::SystemComponent {
    |  _________-------------------___^
    | |         |
    | |         expected due to the type of this binding
141 | |             volatility: 0.5,
142 | |             ..Default::default()
143 | |         });
    | |__________^ expected `HashMap<String, SystemComponent>`, found `Option<SystemComponent>`
    |
    = note: expected struct `im::HashMap<std::string::String, SystemComponent>`
                 found enum `std::option::Option<SystemComponent>`

warning: unused import: `crate::state::ChronosEngine`
 --> src\ai_director_stress.rs:3:5
  |
3 | use crate::state::ChronosEngine;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: value assigned to `volt_decay_base` is never read
   --> src\chronos.rs:104:39
    |
104 |             let mut volt_decay_base = 0.0;
    |                                       ^^^
    |
    = help: maybe it is overwritten before being read?
    = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

warning: value assigned to `narrative` is never read
  --> src\reactor.rs:47:29
   |
47 |         let mut narrative = String::new();
   |                             ^^^^^^^^^^^^^
   |
   = help: maybe it is overwritten before being read?

Some errors have detailed explanations: E0282, E0308.
For more information about an error, try `rustc --explain E0282`.
warning: `brinkmanship_engine` (bin "brinkmanship_engine" test) generated 6 warnings
error: could not compile `brinkmanship_engine` (bin "brinkmanship_engine" test) due to 3 previous errors; 6 warnings 
emitted
